# insurance-changepoint

./: .gitignore  README.md  pyproject.toml  run_databricks_tests.py
.github/workflows/: ci.yml
notebooks/: demo_insurance_changepoint.py
src/insurance_changepoint/: __init__.py  report.py
tests/: conftest.py  test_bocpd_core.py  test_edge_cases.py  test_frequency.py  test_loss_ratio.py  test_pelt.py  test_plot.py  test_priors.py  test_report.py  test_severity.py
