[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insurance-changepoint"
version = "0.1.0"
description = "Bayesian change-point detection for UK insurance pricing time series"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Burning Cost", email = "pricing.frontier@gmail.com" }
]
keywords = [
    "insurance",
    "actuarial",
    "changepoint",
    "BOCPD",
    "regime detection",
    "bayesian",
    "claims",
    "frequency",
    "severity",
    "loss ratio",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "numpy>=1.23",
    "scipy>=1.10",
    "polars>=0.20",
    "matplotlib>=3.6",
    "ruptures>=1.1",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_changepoint"]

[tool.pytest.ini_options]
testpaths = ["tests"]
